--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,21 @@
-# Preface {.unnumbered}
+# R for Research {.unnumbered}
 
-In today’s research landscape, the ability to analyze data effectively is crucial. Whether in academia, industry, or governmental research, data-driven decisions shape outcomes. R, a powerful programming language for statistical analysis and data visualization, has emerged as a cornerstone in this field.
+# Welcome {.unnumbered}
 
-This book, R for Research, is designed for researchers, data scientists, and students looking to leverage R for a variety of analytical tasks. From data manipulation to visualization, and advanced modeling, this guide provides the foundational knowledge to transform raw data into actionable insights.
+The primary goal of R for Research is to provide a clear and practical guide to using R for data analysis in research settings. This book aims to bridge the gap between theoretical knowledge and practical application, equipping readers with the skills needed to handle complex datasets, perform statistical analyses, and create insightful visualizations. Whether you are a beginner or have prior programming experience, this book will help you leverage the full power of R to streamline your research process and make data-driven decisions with confidence.
 
-The journey of mastering R may feel daunting at first, but with the right approach, it quickly becomes intuitive and rewarding. Through hands-on examples, practical exercises, and detailed explanations of core concepts, this book will take you from a beginner to an adept user, ready to tackle complex research problems with confidence.
+By the end of this book, readers will have:
 
-Whether you're aiming to publish research, gain insights from large datasets, or simply deepen your understanding of data, this book equips you with the tools and skills to succeed in your endeavors. Welcome to the world of R—a language that bridges the gap between theory and practice, making data analysis more accessible, efficient, and impactful.
+-  A solid understanding of R’s core functionalities for data analysis.
+
+-  Proficiency in using key R packages for data manipulation, visualization, and statistical modeling.
+
+-  Practical experience through real-world examples and exercises that are relevant to various research fields.
+
+-  The ability to integrate R into your research workflow, allowing for reproducible and transparent analyses.
+
+
+Ultimately, [R for Research]{https://r4r.olamideadu.com/} is a beginner oriented book designed to introduce you to data analysis with R, helping you transform raw data into meaningful insights that drive impactful research.
+
+
+This book will be under development for a while; expected completion should be around early 2026. Do not be surprised if a lot of the chapters do not cohere. You are welcome to open to an [issue on github](https://github.com/xrander/r4r/issues) if you find anything that could improve the work.
